# reserving-app

./: .gitignore  .gitmodules  Pipfile  README.md  app.py  docker-compose.yml  env.example  helper_functions.py  requirements.txt
.github/workflows/: ci.yml
api/: Dockerfile  Pipfile  pyproject.toml  sample_triangle.csv
api/app/: __init__.py  main.py
api/app/routers/: reserving.py
api/app/services/: chainladder_service.py
api/tests/: test_chainladder.py
frontend/: Dockerfile  package-lock.json  package.json  remix.config.ts  tsconfig.json
frontend/app/: entry.client.tsx  root.tsx
frontend/app/components/: AppLayout.tsx
frontend/app/routes/: _index.tsx  triangles.upload.tsx
frontend/app/styles/: global.css
frontend/app/utils/: api.client.ts
infra/: docker-compose.yml
tests/: test_development_constant.py
